--- a/PPTT/Pages/PT/Index.cshtml
+++ b/PPTT/Pages/PT/Index.cshtml
@@ -105,7 +105,7 @@
         }
     </tbody>
 </table>
-<a class="btn-action" asp-page="./Menu">Volver al Menu</a>
+<a class="btn-action" asp-page="/Administradores/Menu">Volver al Menu</a>
 <button id="btnExportar">Exportar Excel</button>
 
 <style>
