--- a/PPTT/Pages/PT/Index.cshtml
+++ b/PPTT/Pages/PT/Index.cshtml
@@ -47,7 +47,10 @@
                 @Html.DisplayNameFor(model => model.PedidoTrabajo[0].Prioridad)
             </th>
             <th>
-                <span>Destinar a empleado</span>
+                <span>Asignar Personal</span>
+            </th>
+            <th>
+                <span>Personal Asignado</span>
             </th>
         </tr>
     </thead>
@@ -101,6 +104,11 @@
                     </div>
                 </td>
                 <td>
+                    <span id="personalAsignado_@item.ID_Orden_Trabajo_Pk" data-orden-id="@item.ID_Orden_Trabajo_Pk">
+                        Aquí se capturará item.ID_Orden_Trabajo_Pk
+                    </span>
+                </td>
+                <td>
                     <a asp-page="./Details" asp-route-id="@item.ID_Orden_Trabajo_Pk">Details</a>
                 </td>
             </tr>
@@ -109,6 +117,148 @@
 </table>
 <a class="btn-action" asp-page="./Menu">Volver al Menu</a>
 <button id="btnExportar">Exportar Excel</button>
+
+
+<div class="modal fade" id="confirmModal" tabindex="-1" role="dialog" aria-labelledby="confirmModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <form method="post" asp-page-handler="AsignarUsuario">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="confirmModalLabel">Confirmar Asignación</h5>
+                </div>
+                <div class="modal-body">
+                    <p>¿Está seguro de querer asignar a <b id="usuarioNombre"></b> para esta tarea?</p>
+                    <input type="hidden" id="usuarioId" name="UsuarioId" />
+                    <input type="hidden" id="ordenTrabajoId" name="OrdenTrabajoId" />
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" id="cancelaAsignacion" data-dismiss="modal">Cancelar</button>
+                    <button type="submit" class="btn btn-primary">Aceptar</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>  <!-- VENTANA MODAL -->
+
+<!-- SCRIPTS PARA EXPORTAR AL EXCEL -->
+<script src="https://unpkg.com/xlsx@0.16.9/dist/xlsx.full.min.js"></script>
+<script src="https://unpkg.com/file-saverjs@latest/FileSaver.min.js"></script>
+<script src="https://unpkg.com/tableexport@latest/dist/js/tableexport.min.js"></script>
+
+<script>
+    document.addEventListener("DOMContentLoaded", function () {
+        const $btnExportar = document.querySelector("#btnExportar"),
+            $tabla = document.querySelector("#tabla");
+
+        $btnExportar.addEventListener("click", function () {
+            let tableExport = new TableExport($tabla, {
+                exportButtons: false, // No queremos botones adicionales
+                filename: "Reporte de Peticiones de Trabajo", // Nombre del archivo de Excel
+                sheetname: "Peticiones", // Título de la hoja
+            });
+
+            let datos = tableExport.getExportData();
+            let preferenciasDocumento = datos.tabla.xlsx;
+
+            tableExport.export2file(
+                preferenciasDocumento.data,
+                preferenciasDocumento.mimeType,
+                preferenciasDocumento.filename,
+                preferenciasDocumento.fileExtension,
+                preferenciasDocumento.merges,
+                preferenciasDocumento.RTL,
+                preferenciasDocumento.sheetname
+            );
+        });
+    });
+</script> <!-- SCRIPTS PARA EXPORTAR A EXCEL -->
+
+
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+<script type="text/javascript">
+        $(document).ready(function () {
+        $('select[id^="usuarioSelect_"]').each(function () {
+            var usuarioSelect = $(this); 
+            var selectedDivision = usuarioSelect.data('division-id');
+            var ordenTrabajoId = usuarioSelect.closest('tr').find('span[id^="personalAsignado_"]').data('orden-id');
+            var personalAsignado = $('#personalAsignado_' + ordenTrabajoId);
+        
+            if (selectedDivision && usuarioSelect.find('option').length <= 1) {
+                $.ajax({
+                    url: '@Url.Page("./Index", "UsuariosFiltrados")',
+                    type: 'GET',
+                    data: { division: selectedDivision },
+                    success: function (data) {                        
+                        usuarioSelect.empty(); 
+                        usuarioSelect.append('<option hidden selected value="">Seleccione el usuario</option>');
+                        $.each(data, function (index, usuario) {
+                            usuarioSelect.append('<option value="' + usuario.iD_Usuario_Pk + '">' + usuario.nombre + ' ' + usuario.apellido + '</option>');
+                        });
+                    },
+                    error: function (error) {
+                        console.log('Error:', error);
+                    }
+                });
+            }
+                                 
+            if (ordenTrabajoId) {
+                $.ajax({
+                    url: '@Url.Page("./Index", "UsuarioPorPt")',
+                    type: 'GET',
+                    data: { PT: ordenTrabajoId }, 
+                    success: function (data) {                        
+                        personalAsignado.empty(); 
+                        personalAsignado.append('<span>' + data[0].nombre + ' ' + data[0].apellido + '</span>'); 
+                    },
+                    error: function (error) {
+                        console.log('Error en la carga de información del usuario asignado:', error);
+                    }
+                });
+            }
+        }); //LISTADO DE USUARIOS
+    
+        $('select[id^="usuarioSelect_"]').change(function () {
+            var selectedOption = $(this).find("option:selected");
+            var selectedUsuarioId = selectedOption.val();
+            var selectedOrdenTrabajoId = $(this).attr("id").split("_")[1];             
+            $('#usuarioNombre').text(selectedOption.text()); 
+            $('#usuarioId').val(selectedUsuarioId); 
+            $('#ordenTrabajoId').val(selectedOrdenTrabajoId); 
+
+            $('#confirmModal').modal('show'); 
+        }); //EVENTO ONCHANGE EN EL SELECT
+
+        $('#confirmarAsignacion').click(function () {
+            var usuarioId = $('#usuarioId').val();
+            var ordenTrabajoId = $('#ordenTrabajoId').val();
+            console.log(usuarioId);
+            console.log(ordenTrabajoId);
+            $.ajax({
+                url: '@Url.Page("./Index", "AsignarUsuario")',
+                type: 'POST',
+                data: { UsuarioId: usuarioId, OrdenTrabajoId: ordenTrabajoId },
+                success: function (response) {
+                    $('#confirmModal').modal('hide');
+                    alert("Usuario asignado con éxito");
+                    location.reload();
+                },
+                error: function (error) {
+                    console.log('Error:', error);
+                }
+            });
+
+        }); //EVENTO ONCLICK CONFIRMAR ASIGNACION EN LA VENTANA MODAL
+
+        $('#cancelaAsignacion').click(function () {
+            
+        $('#confirmModal').modal('hide');
+                }); //EVENTO ONCLICK CANCELAR ASIGNACION EN LA VENTANA MODAL
+            });
+
+</script>
+
 
 <style>
     body {
@@ -166,7 +316,7 @@
     th, td {
         padding: 10px;
         text-align: left;
-        border-bottom: 1px solid #ddd;
+        border-bottom: 1px solid #ddd;   
     }
 
     th {
@@ -181,130 +331,4 @@
         margin-bottom: 10px;
         font-weight: bold;
     }
-</style>
-
-<!-- Scripts para exportar a Excel -->
-<script src="https://unpkg.com/xlsx@0.16.9/dist/xlsx.full.min.js"></script>
-<script src="https://unpkg.com/file-saverjs@latest/FileSaver.min.js"></script>
-<script src="https://unpkg.com/tableexport@latest/dist/js/tableexport.min.js"></script>
-
-
-<!-- Script para exportar a Excel -->
-<script>
-    document.addEventListener("DOMContentLoaded", function () {
-        const $btnExportar = document.querySelector("#btnExportar"),
-            $tabla = document.querySelector("#tabla");
-
-        $btnExportar.addEventListener("click", function () {
-            let tableExport = new TableExport($tabla, {
-                exportButtons: false, // No queremos botones adicionales
-                filename: "Reporte de Peticiones de Trabajo", // Nombre del archivo de Excel
-                sheetname: "Peticiones", // Título de la hoja
-            });
-
-            let datos = tableExport.getExportData();
-            let preferenciasDocumento = datos.tabla.xlsx;
-
-            tableExport.export2file(
-                preferenciasDocumento.data,
-                preferenciasDocumento.mimeType,
-                preferenciasDocumento.filename,
-                preferenciasDocumento.fileExtension,
-                preferenciasDocumento.merges,
-                preferenciasDocumento.RTL,
-                preferenciasDocumento.sheetname
-            );
-        });
-    });
-</script>
-
-<!-- Modal de confirmación -->
-<div class="modal fade" id="confirmModal" tabindex="-1" role="dialog" aria-labelledby="confirmModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <form method="post" asp-page-handler="AsignarUsuario">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="confirmModalLabel">Confirmar Asignación</h5>
-                </div>
-                <div class="modal-body">
-                    <p>¿Está seguro de querer asignar a <b id="usuarioNombre"></b> para esta tarea?</p>
-                    <input type="hidden" id="usuarioId" name="UsuarioId" />
-                    <input type="hidden" id="ordenTrabajoId" name="OrdenTrabajoId" />
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" id="cancelaAsignacion" data-dismiss="modal">Cancelar</button>
-                    <button type="submit" class="btn btn-primary">Aceptar</button>
-                </div>
-            </form>
-        </div>
-    </div>
-</div>
-
-
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
-<script type="text/javascript">
-        $(document).ready(function () {
-        $('select[id^="usuarioSelect_"]').each(function () {
-            var usuarioSelect = $(this); 
-            var selectedDivision = usuarioSelect.data('division-id');
-        
-            if (selectedDivision && usuarioSelect.find('option').length <= 1) {
-                $.ajax({
-                    url: '@Url.Page("./Index", "UsuariosFiltrados")',
-                    type: 'GET',
-                    data: { division: selectedDivision },
-                    success: function (data) {                        
-                        usuarioSelect.empty(); 
-                        usuarioSelect.append('<option hidden selected value="">Seleccione el usuario</option>');
-                        $.each(data, function (index, usuario) {
-                            usuarioSelect.append('<option value="' + usuario.iD_Usuario_Pk + '">' + usuario.nombre + ' ' + usuario.apellido + '</option>');
-                        });
-                    },
-                    error: function (error) {
-                        console.log('Error:', error);
-                    }
-                });
-            }
-        }); //LISTADO DE USUARIOS
-    
-        $('select[id^="usuarioSelect_"]').change(function () {
-            var selectedOption = $(this).find("option:selected");
-            var selectedUsuarioId = selectedOption.val();
-            var selectedOrdenTrabajoId = $(this).attr("id").split("_")[1];             
-            $('#usuarioNombre').text(selectedOption.text()); 
-            $('#usuarioId').val(selectedUsuarioId); 
-            $('#ordenTrabajoId').val(selectedOrdenTrabajoId); 
-
-            $('#confirmModal').modal('show'); 
-        }); //EVENTO ONCHANGE EN EL SELECT
-
-        $('#confirmarAsignacion').click(function () {
-            var usuarioId = $('#usuarioId').val();
-            var ordenTrabajoId = $('#ordenTrabajoId').val();
-            console.log(usuarioId);
-            console.log(ordenTrabajoId);
-            $.ajax({
-                url: '@Url.Page("./Index", "AsignarUsuario")',
-                type: 'POST',
-                data: { UsuarioId: usuarioId, OrdenTrabajoId: ordenTrabajoId },
-                success: function (response) {
-                    $('#confirmModal').modal('hide');
-                    alert("Usuario asignado con éxito");
-                    location.reload();
-                },
-                error: function (error) {
-                    console.log('Error:', error);
-                }
-            });
-
-        });
-
-
-        $('#cancelaAsignacion').click(function () {
-            $('#confirmModal').modal('hide');
-        });
-    });
-
-</script>
-
+</style> 
