Agrego a index prioridades.

--- a/PPTT/Pages/PT/Details.cshtml
+++ b/PPTT/Pages/PT/Details.cshtml
@@ -107,10 +107,10 @@
             @Html.DisplayFor(model => model.PedidoTrabajo.Estado.Descripcion_Estado)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.PedidoTrabajo.Prioridad)
+            @Html.DisplayNameFor(model => model.PedidoTrabajo.ID_Prioridad_Fk)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.PedidoTrabajo.Prioridad)
+            @Html.DisplayFor(model => model.PedidoTrabajo.ID_Prioridad_Fk)
         </dd>
     </dl>
 </div>
